# llmcode

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bubble_sort.py  docker-compose.yml  mkdocs.yml  multiplication.py  multiplication_table.py  pyproject.toml  python_tutorial.py  simple_demo.py  test.txt  tokyo_travel_info.json  九九乘法表.py
.github/: llmcode-action.yml
.github/templates/: custom.yml  issue-triage.yml  pr-review.yml
.github/workflows/: ci.yml  docker.yml  evals-nightly.yml
.llm-code/result_cache/: 005b824d-88a2-4243-a436-f581c45536cc.txt  0c2c9e0d-76d1-41c7-b64d-a8a42eca3a18.txt  189775e8-c998-4be5-9aaa-ea6dff075d8d.txt  3ee91131-4818-4c22-b5eb-13fa4270f098.txt  47ab89a0-b634-4b54-92e5-9258fd67fc19.txt  6260a350-ae6f-4893-9c1f-8b5583ca25c9.txt  9ba25174-9824-4013-9e26-9f6f7cff7798.txt  a751ce4a-744c-4dd3-a45b-f5e9c9b37ead.txt  ba6bec47-110c-45bb-8075-b7590a1342b2.txt  ded6bd72-e2e4-46fa-a062-724bdc07c9af.txt
.remember/: next-session-v2-repl.md  remember.md
benchmarks/: bench_compression.py  bench_tool_registry.py
docs/: TODO-next-session.md  architecture.md  breaking_changes_v2.md  configuration.md  coordinator.md  getting-started.md  github-action.md  index.md  memory.md  migration-v2.md  plugin_migration_guide.md  plugins.md  post_v12_release_actions.md  server.md  streaming-executor-tradeoffs.md  tools.md  upgrade_to_v2.md
docs/engine/: async_migration.md  component_author_guide.md  memory_components.md  memory_migration.md  model_profile_author_guide.md  observability.md  observability_attribute_reference.md  observability_exporters.md  observability_redaction.md  parser_variants.md  policy_author_guide.md  prompt_template_author_guide.md
docs/hayhooks/: claude_desktop_example.json  index.md  mcp.md  openai_compat.md  security.md
docs/security/: v2_threat_model.md
examples/: config-local-qwen.json  config-ollama.json  config-openai.json  config-provider-map.json  config-with-mcp.json
examples/model_profiles/: 10-copilot.toml  15-codex.toml  20-beast.toml  30-claude-sonnet.toml  35-gemini.toml  40-trinity.toml  44-qwen3-235b-thinking.toml  45-qwen3.5-122b.toml  50-llama.toml  60-kimi.toml  65-glm-5.1.toml  claude-sonnet.toml  custom-local.toml  glm-5.1.toml  qwen3.5-122b.toml
experiments/: M0-FINDINGS.md  README.md  repl_poc.py
extensions/vscode/: README.md  package-lock.json  package.json
ink-ui/: package-lock.json  package.json  test.sh  tsconfig.json
ink-ui/src/: App.tsx  index.tsx  protocol.ts
llm_code/: __init__.py  error_model.py  logging.py
llm_code/_builtins/: __init__.py
llm_code/accounting/: cli.py  engine.py  storage.py  types.py
llm_code/accounting_simple/: __init__.py  cli.py  engine.py  storage.py  types.py
llm_code/algorithms/: gemma4_agent.py
llm_code/analysis/: __init__.py  cache.py  engine.py  go_rules.py  js_rules.py  python_rules.py  rules.py  rust_rules.py  universal_rules.py
llm_code/api/: anthropic_provider.py  client.py  content_order.py  conversion.py  errors.py  openai_compat.py  provider.py  provider_registry.py  rate_limiter.py  request_optimizations.py  sse.py  types.py
llm_code/cli/: app.py  commands.py  diagnostics.py  image.py  ink_bridge.py  input.py  main.py  migrate_v26_state_db.py  oneshot.py  profiles_cmd.py  render.py  server_commands.py  status_line.py  streaming.py  tui.py  tui_main.py  updater.py
llm_code/computer_use/: __init__.py  app_detect.py  app_tier.py  coordinator.py  input_control.py  screenshot.py
llm_code/config/: __init__.py  schema_export.py
llm_code/cron/: __init__.py  parser.py  scheduler.py  storage.py
llm_code/engine/: __init__.py  agent.py  agent_result.py  async_component.py  async_pipeline.py  component.py  concurrency.py  default_pipeline.py  graph.py  pipeline.py  prompt_builder.py  state.py  tracing.py
llm_code/enterprise/: __init__.py  audit.py  auth.py  oidc.py  rbac.py
llm_code/evals/: __init__.py  runner.py  types.py
llm_code/harness/: __init__.py  config.py  engine.py  guides.py  sensors.py  templates.py
llm_code/hayhooks/: __init__.py  auth.py  cli.py  config_schema.py  debug_repl.py  errors.py  ide_rpc.py  mcp_transport.py  openai_compat.py  session.py  streaming.py
llm_code/hida/: __init__.py  classifier.py  engine.py  profiles.py  types.py
llm_code/i18n/: __init__.py
llm_code/ide/: __init__.py  bridge.py  detector.py  server.py
llm_code/integrity/: __init__.py  sea.py
llm_code/lsp/: client.py  detector.py  languages.py  manager.py  tools.py
llm_code/marketplace/: builtin_registry.py  dependency_resolver.py  executor.py  installer.py  manifest.py  plugin.py  registry.py  validator.py
llm_code/mcp/: agent_approval.py  bridge.py  client.py  health.py  manager.py  oauth.py  transport.py  types.py
llm_code/memory/: __init__.py  cli.py  layer.py  migrate.py
llm_code/migrate/: __init__.py  cli.py
llm_code/perf/: __init__.py  harness.py
llm_code/profiles/: __init__.py  builtins.py
llm_code/remote/: client.py  protocol.py  server.py  ssh_proxy.py
llm_code/runtime/: _retry_tracker.py  _stopwords.py  agent_context.py  agent_memory.py  agent_registry.py  app_state.py  auto_commit.py  auto_compact.py  auto_diagnose.py  background_task_registry.py  checkpoint.py  checkpoint_recovery.py  compact_boundaries.py  compaction.py  compressor.py  config.py  config_enterprise.py  config_features.py  config_migration.py  config_version.py  (+82 more)
schemas/: settings.schema.json
scripts/: capture_conversion_corpus.py  capture_prompt_baseline.py  capture_system_prompt_v260.py  gen_settings_schema.py
tests/: conftest.py  smoke_test.py  test_error_model.py  test_error_model_provider_wrap.py  test_integration.py  test_integration_v2.py  test_integration_v3.py  test_integration_v4.py  test_integration_v5.py  test_integration_v6.py  test_logging_file.py  test_logging_get_logger.py  test_no_legacy_references.py  test_no_model_branch_in_core.py  test_readme_claims_match_runtime.py  test_regression.py
tools/: demo_expense_tracker.py  simple_expense_tracker.py  tokyo_travel_scraper.py
(+1174 files in other folders)
