[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmcode-cli"
version = "1.18.1"
description = "Open-source AI agent runtime for any LLM — production-grade coding agent with multi-layer memory, multi-agent orchestration, and defense-in-depth security"
license = {text = "MIT"}
authors = [{name = "Adam Hung"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx[http2]>=0.27",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.0",
    "click>=8.0",
    "textual>=1.0",
    "filelock>=3.12",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/DJFeu/llmcode"
Repository = "https://github.com/DJFeu/llmcode"
Issues = "https://github.com/DJFeu/llmcode/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
websocket = ["websockets>=12.0"]
voice = ["sounddevice>=0.5"]
voice-google = ["google-cloud-speech>=2.0"]
computer-use = ["pyautogui>=0.9", "Pillow>=10.0", "mss>=9.0"]
ide = ["psutil>=5.9"]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "langfuse>=3.0",
]
web = ["readability-lxml>=0.8", "html2text>=2024.2"]
web-browser = ["readability-lxml>=0.8", "html2text>=2024.2", "playwright>=1.40"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]
tiktoken = ["tiktoken>=0.7"]
treesitter = ["tree-sitter>=0.23", "tree-sitter-language-pack>=0.5"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "ruff>=0.5",
]

[project.scripts]
llmcode = "llm_code.cli.tui_main:main"

[tool.hatch.build.targets.wheel]
packages = ["llm_code"]

[tool.hatch.build.targets.sdist]
include = [
    "llm_code/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    ".venv*",
    ".claude/",
    "tests/",
    "docs/",
    "dist/",
    "build/",
    "**/__pycache__",
    "**/*.pyc",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
