[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmcode-cli"
version = "1.23.1"
description = "Open-source AI agent runtime for any LLM — production-grade coding agent with multi-layer memory, multi-agent orchestration, and defense-in-depth security"
license = {text = "MIT"}
authors = [{name = "Adam Hung"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx[http2]>=0.27",
    "rich>=13.0",
    "prompt-toolkit>=3.0.47",
    "pydantic>=2.0",
    "click>=8.0",
    "filelock>=3.12",
    "pyyaml>=6.0",
    # tomllib entered the stdlib in 3.11; pull tomli (same API) on 3.10
    # so model_profile._load_toml keeps working there.
    'tomli>=2.0 ; python_version < "3.11"',
]

[project.urls]
Homepage = "https://github.com/DJFeu/llmcode"
Repository = "https://github.com/DJFeu/llmcode"
Issues = "https://github.com/DJFeu/llmcode/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
websocket = ["websockets>=12.0"]
voice = ["sounddevice>=0.5"]
voice-local = ["sounddevice>=0.5", "faster-whisper>=1.0"]
voice-google = ["google-cloud-speech>=2.0"]
computer-use = ["pyautogui>=0.9", "Pillow>=10.0", "mss>=9.0"]
ide = ["psutil>=5.9"]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "langfuse>=3.0",
]
web = ["readability-lxml>=0.8", "html2text>=2024.2"]
web-browser = ["readability-lxml>=0.8", "html2text>=2024.2", "playwright>=1.40"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]
tiktoken = ["tiktoken>=0.7"]
treesitter = ["tree-sitter>=0.23", "tree-sitter-language-pack>=0.5"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "ruff>=0.5",
    "pexpect>=4.9.0",  # M12 pexpect smoke tests
]

[project.scripts]
llmcode = "llm_code.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["llm_code"]

[tool.hatch.build.targets.sdist]
include = [
    "llm_code/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    ".venv*",
    ".claude/",
    "tests/",
    "docs/",
    "dist/",
    "build/",
    "**/__pycache__",
    "**/*.pyc",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit test — exercises a single function/class with no I/O or external deps",
]

[tool.ruff]
target-version = "py310"
line-length = 100
